--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "homepage": "./" 
   },
   "browserslist": [
     ">0.2%",
